# personal-agent

./: .clippy.toml  .gitignore  CHANGES_MCP_CONFIGURE.md  Cargo.toml  DEBUG_NOTES.md  DEBUG_TRAY_ICON.md  MCP_AUTH_FIX_SUMMARY.md  OAUTH_UI_IMPLEMENTATION.md  PHASE-0-COMPLETE.md  PHASE1_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_LLM_INTEGRATION.md  PHASE_0_REPORT.md  POPOVER_FIX.md  POPOVER_IMPLEMENTATION.md  README.md  SETTINGS_REDESIGN_SUMMARY.md  SMITHERY_OAUTH_IMPLEMENTATION.md  UI_BUG_FIXES_SUMMARY.md  build.rs  check_tray_visibility.sh  debug_tray_icon.sh  run_debug_build.sh  run_test.sh  test_icon_visibility.sh  test_tray_icon.sh  whitelizard.txt
.ast-grep/rules/: theme-usage.yml
.cargo/: config.toml
.github/workflows/: pr-quality-and-e2e.yml  release.yml
.jefe/: issue-prompt.md
.llxprt/: LLXPRT.md  settings.json
assets/: AppIcon.icns
assets/MenuIcon.imageset/: Contents.json
assets/themes/: ansi-light.json  ansi.json  atom-one-dark.json  ayu-light.json  ayu.json  default-light.json  default.json  dracula.json  github-dark.json  github-light.json  googlecode.json  green-screen.json  no-color.json  shades-of-purple.json  xcode.json
dev-docs/: goodtests.md  gpui-keyboard-e2e-scenarios.md  release-homebrew.md  release.md  scenario-trace.md
dev-docs/architecture/: ARCHITECTURE_IMPROVEMENTS.md  chat-flow.md  gpui-architecture.md
dev-docs/drafts/: sqlite-migration-issue.md
dev-docs/mockups/: popout-mode.html  profile-editor-advanced-parameters.html  settings-fonts.html  settings-redesign.html  settings-skills-v2.html  settings-skills.html
dev-docs/requirements/: application.md  data-models.md  events.md  presentation.md
docs/: README.md  mcps.md  skills.md  walkthrough.md
examples/: registry_usage.rs  test_cache_load.rs  test_mcp.rs  test_mcp_init.rs
personal-agent/: .clippy.toml  Cargo.toml  IMPLEMENTATION_NOTES.md  MODEL_SELECTOR_IMPLEMENTATION.md  NSSTACKVIEW_FIX.md  PHASE3_COMPLETION.md  PHASE3_FIXES_COMPLETED.md  README.md
personal-agent/docs/: PHASE2_SUMMARY.md
personal-agent/src/: error.rs  lib.rs  main.rs  main.rs.original  main_debug.rs  main_menubar.rs
plan/.completed/: P01.md
project-plans/: issue34.md
project-plans/20260304gpuiremediate/: execution-tracker.md  specification.md
project-plans/agent-mode-refactor/: diagrams.md  execution-tracker.md  specification.md
project-plans/agentmode/: PLAN.md
project-plans/excision/: old-ui-excision-plan.md
project-plans/gpui-migration/: appendix-integration-contracts.md  execution-tracker.md  review-architecture-coherence.md  specification.md
project-plans/gpuiredux/: 00-overview.md  execution-tracker.md  phase-01-foundation.md  phase-02-components.md  phase-03-chat-layout.md  specification.md
project-plans/initial/: implementation-plan.md  model-selector-wireframe.md  requirements.md  ui-mockup-v2.html  ui-wireframes.md
project-plans/issue11/: execution-tracker.md  specification.md
project-plans/issue11b/: execution-tracker.md  specification.md
project-plans/issue12/: P04.md  plan.md
project-plans/issue130/: mockups.md  plan.md  subagent-review.md
project-plans/issue151/: bubble-layout-exposure-plan.md
project-plans/issue168/: execution-tracker.md  overview.md
project-plans/issue173/: execution-tracker.md  specification.md
project-plans/issue180/: README.md
project-plans/issue30/: execution-tracker.md  specification.md
project-plans/issue32/: plan.md
project-plans/issue51/: PLAN.md  mockup.html
project-plans/issue56/: execution-tracker.md  overview.md
project-plans/issue62/: comprehensive-review.md  escalation-p05a-attempt3.md  execution-tracker.md  overview-review.md  overview.md  plan-review.md  requirements-review.md  requirements.md  spec-phase-b.md
project-plans/mcps/: CRITIQUE.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_PLAN.md  MCP_INIT_RELIABILITY_CRITIQUE.md  MCP_INIT_RELIABILITY_DESIGN.md  REGISTRY_RESEARCH.md  SPEC.md  UI_FLOW.md
project-plans/nextgpuiremediate/: execution-tracker.md  specification.md
project-plans/refactor/: execution-tracker.md  preflight-report.md  preflight-verification-checklist.md  review-architecture.md  specification.md  (+1 more)
scripts/: check-quality.sh  prove_broken_now.sh  seed_legacy_profiles.py  stabilize_50_turns.sh  verify_bug_suite.sh  verify_conversation_dropdown_population.sh  verify_conversation_routing.sh  verify_conversation_selection_replay.sh  verify_memory_simple.sh  verify_profile_dropdown_population.sh  verify_profile_load.sh  verify_rename_visual.sh  verify_settings_paging.sh  verify_settings_scroll.sh  verify_six_blockers.sh  verify_ui_current.sh
src/: app.rs  app_context.rs  lib.rs  main.rs  main_debug.rs  main_gpui.rs  main_menubar.rs  main_utils.rs  migration.rs  popover.rs
tests/: agent_integration_test.rs  agent_prerequisites_test.rs  api_key_manager_ui_regression_tests.rs  app_store_tests.rs  backup_command_tests.rs  backup_final_coverage_tests.rs  backup_presenter_behavioral_tests.rs  backup_presenter_error_tests.rs  backup_scheduler_behavioral_tests.rs  backup_scheduler_extra_tests.rs  backup_service_behavioral_tests.rs  backup_service_coverage_tests.rs  backup_service_extra_tests.rs  backup_types_tests.rs  chat_presenter_coverage_tests.rs  chat_profile_switch_ui_e2e_test.rs  chat_rename_overwrite_behavior_tests.rs  chat_service_profile_routing_integration_test.rs  chat_startup_scrollback_layout_regression_tests.rs  chat_view_conversation_switch_regression_tests.rs  chat_view_handle_command_tests.rs  chat_view_title_visibility_tests.rs  config_settings_defaults_tests.rs  config_settings_profile_tests.rs  config_settings_tests.rs  config_storage_tests.rs  conversation_message_persistence_tests.rs  conversation_popup_behavior_tests.rs  conversation_rename_behavior_tests.rs  conversation_title_behavior_tests.rs  coverage_boost_non_gpui_tests.rs  coverage_final_boost_tests.rs  coverage_mcp.rs  coverage_smoke.rs  coverage_ui.rs  e2e_agent_tool_execution.rs  e2e_architecture.rs  e2e_chat_synthetic.rs  e2e_install_and_search.rs  e2e_presenter_chat.rs  (+98 more)
tmp/: feedback.txt
xtask/: Cargo.toml
(+828 files in other folders)
