[package]
name = "personal_agent"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "personal_agent_gpui"
path = "src/main_gpui.rs"

[dependencies]
tray-icon = "0.21"
image = "0.25"
tracing = "0.1"
tracing-subscriber = "0.3"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSAlert",
    "NSAppearance",
    "NSApplication",
    "NSColor",
    "NSComboBox",
    "NSControl",
    "NSEvent",
    "NSFont",
    "NSImage",
    "NSMenu",
    "NSMenuItem",
    "NSPopover",
    "NSPopUpButton",
    "NSResponder",
    "NSRunningApplication",
    "NSStatusBar",
    "NSStatusBarButton",
    "NSStatusItem",
    "NSStepper",
    "NSSwitch",
    "NSTextField",
    "NSView",
    "NSViewController",
    "NSWindow",
    "NSStackView",
    "NSLayoutConstraint",
    "block2",
    "objc2-core-foundation",
] }
objc2-foundation = { version = "0.3", features = ["NSData", "NSGeometry", "NSNotification", "NSString", "NSThread"] }
objc2-quartz-core = { version = "0.3", features = ["CALayer", "objc2-core-foundation", "objc2-core-graphics"] }
objc2-core-graphics = "0.3"
# Note: core-foundation and core-graphics removed - we use objc2-core-foundation/objc2-core-graphics instead
# and removing these avoids version conflicts with GPUI
raw-window-handle = "0.6"
# Pin GPUI to same commit that ExactoBar uses (verified to build)
gpui = { git = "https://github.com/zed-industries/zed", rev = "c67328ab2e0d572718575e02ae07db37552e1cbe", package = "gpui", features = ["test-support"] }
# Pin core-text to 21.0.0 to avoid core-graphics version conflict (21.1.0 requires core-graphics 0.25 which conflicts)
core-text = "=21.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
dirs = "5"
toml = "0.8"
thiserror = "2"
anyhow = "1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Pin serdes-ai workspace crates to upstream commit for reproducible local/CI builds.
serdes-ai = { git = "https://github.com/janfeddersen-wq/serdesAI.git", rev = "be5774b5c618a71fe899ac5b8c6a5e958ea42a5d", package = "serdes-ai", features = ["openai", "anthropic", "mcp"] }
serdes-ai-agent = { git = "https://github.com/janfeddersen-wq/serdesAI.git", rev = "be5774b5c618a71fe899ac5b8c6a5e958ea42a5d", package = "serdes-ai-agent" }
serdes-ai-tools = { git = "https://github.com/janfeddersen-wq/serdesAI.git", rev = "be5774b5c618a71fe899ac5b8c6a5e958ea42a5d", package = "serdes-ai-tools" }
serdes-ai-mcp = { git = "https://github.com/janfeddersen-wq/serdesAI.git", rev = "be5774b5c618a71fe899ac5b8c6a5e958ea42a5d", package = "serdes-ai-mcp", features = ["client", "reqwest"] }
serdes-ai-models = { git = "https://github.com/janfeddersen-wq/serdesAI.git", rev = "be5774b5c618a71fe899ac5b8c6a5e958ea42a5d", package = "serdes-ai-models" }
serdes-ai-core = { git = "https://github.com/janfeddersen-wq/serdesAI.git", rev = "be5774b5c618a71fe899ac5b8c6a5e958ea42a5d", package = "serdes-ai-core" }
dispatch = "0.2"
urlencoding = "2.1"
tiny_http = "0.12"
once_cell = "1.19"
flume = "0.11"
keyring = { version = "3", features = ["apple-native"] }
cocoa = "0.26"
objc = "0.2"
rand = "0.9"
smol = "2"
pin-project-lite = "0.2"
bytes = "1"

[dev-dependencies]
tempfile = "3"
rstest = "0.18"
wiremock = "0.6"

[[test]]
name = "gui_main_thread"
harness = false

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = "warn"
nursery = "warn"
cognitive_complexity = "warn"

# Disable incremental compilation for local dev/test to avoid large incremental artifact growth (Issue #23).
[profile.dev]
incremental = false

[profile.test]
incremental = false
