[package]
name = "personal_agent"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Personal agent with macOS menu bar UI"


[[bin]]
name = "personal_agent_gpui"
path = "src/main_gpui.rs"

[dependencies]
tray-icon = "0.21"
image = "0.25"
tracing = "0.1"
tracing-subscriber = "0.3"
# Note: core-foundation and core-graphics removed - we use objc2-core-foundation/objc2-core-graphics instead
# and removing these avoids version conflicts with GPUI
raw-window-handle = "0.6"
# Pin GPUI to same commit that ExactoBar uses (verified to build)
gpui = { git = "https://github.com/zed-industries/zed", rev = "c67328ab2e0d572718575e02ae07db37552e1cbe", package = "gpui", features = ["test-support"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
dirs = "5"
toml = "0.8"
thiserror = "2"
anyhow = "1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Pin serdes-ai workspace crates to upstream commit for reproducible local/CI builds.
serdes-ai = { git = "https://github.com/janfeddersen-wq/serdesAI.git", rev = "be5774b5c618a71fe899ac5b8c6a5e958ea42a5d", package = "serdes-ai", features = ["openai", "anthropic", "mcp"] }
serdes-ai-agent = { git = "https://github.com/janfeddersen-wq/serdesAI.git", rev = "be5774b5c618a71fe899ac5b8c6a5e958ea42a5d", package = "serdes-ai-agent" }
serdes-ai-tools = { git = "https://github.com/janfeddersen-wq/serdesAI.git", rev = "be5774b5c618a71fe899ac5b8c6a5e958ea42a5d", package = "serdes-ai-tools" }
serdes-ai-mcp = { git = "https://github.com/janfeddersen-wq/serdesAI.git", rev = "be5774b5c618a71fe899ac5b8c6a5e958ea42a5d", package = "serdes-ai-mcp", features = ["client", "reqwest"] }
serdes-ai-models = { git = "https://github.com/janfeddersen-wq/serdesAI.git", rev = "be5774b5c618a71fe899ac5b8c6a5e958ea42a5d", package = "serdes-ai-models" }
serdes-ai-core = { git = "https://github.com/janfeddersen-wq/serdesAI.git", rev = "be5774b5c618a71fe899ac5b8c6a5e958ea42a5d", package = "serdes-ai-core" }
urlencoding = "2.1"
tiny_http = "0.12"
once_cell = "1.19"
flume = "0.11"
rand = "0.9"
smol = "2"
# Issue 62: Markdown rendering
pulldown-cmark = "0.13"
url = "2"
bytes = "1"
regex = "1"
ignore = "0.4"
glob = "0.3"
rusqlite = { version = "0.33", features = ["bundled", "backup"] }
serde_yaml = "0.9"
tiktoken-rs = "0.9"
flate2 = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSAlert",
    "NSAppearance",
    "NSApplication",
    "NSColor",
    "NSComboBox",
    "NSControl",
    "NSEvent",
    "NSFont",
    "NSImage",
    "NSMenu",
    "NSMenuItem",
    "NSPopover",
    "NSPopUpButton",
    "NSResponder",
    "NSRunningApplication",
    "NSStatusBar",
    "NSStatusBarButton",
    "NSStatusItem",
    "NSStepper",
    "NSSwitch",
    "NSTextField",
    "NSView",
    "NSViewController",
    "NSWindow",
    "NSStackView",
    "NSLayoutConstraint",
    "block2",
    "objc2-core-foundation",
] }
objc2-foundation = { version = "0.3", features = ["NSData", "NSGeometry", "NSNotification", "NSString", "NSThread"] }
objc2-quartz-core = { version = "0.3", features = ["CALayer", "objc2-core-foundation", "objc2-core-graphics"] }
objc2-core-graphics = "0.3"
# Pin core-text to 21.0.0 to avoid core-graphics version conflict (21.1.0 requires core-graphics 0.25 which conflicts)
core-text = "=21.0.0"
dispatch = "0.2"
keyring = { version = "3", features = ["apple-native"] }
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }
ksni = { version = "0.3", features = ["blocking"] }

[target.'cfg(target_os = "windows")'.dependencies]
tray-icon = "0.21"
muda = "0.17"

[target.'cfg(not(any(target_os = "macos", target_os = "linux")))'.dependencies]
keyring = "3"

[dev-dependencies]
tempfile = "3"
rstest = "0.18"
wiremock = "0.6"

[[test]]
name = "gui_main_thread"
harness = false

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = "warn"
nursery = "warn"
cognitive_complexity = "warn"

# Disable incremental compilation for local dev/test to avoid large incremental artifact growth (Issue #23).
[profile.dev]
incremental = false

[profile.test]
incremental = false

# Linux packaging metadata for cargo-deb and cargo-generate-rpm
[package.metadata.deb]
maintainer = "Andrew C. Oliver <acoliver@apache.org>"
section = "utils"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/personal_agent_gpui", "usr/bin/personal-agent", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/personal_agent_gpui", dest = "/usr/bin/personal-agent", mode = "755" },
]
